button and roles 2

--- a/app/templates/profiles/club/profile.html
+++ b/app/templates/profiles/club/profile.html
@@ -93,7 +93,7 @@
   </ul>
 </div>
  <div id="profile-tabs-content">
-    <div id="club-members" class="profile-associate">
+    <div id="profile-allies" class="profile-associate">
       {% for member in club.group.members %}
       <div class="subprofile box">
         <div class="subprofile-image-wrap">
