--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,22 @@
         function miniprofile(name="",identifier="", bio="", href="",photo_src="",symbol="") {
             return `{% include 'profiles/mini-profile.html' %}`.replaceAll('\\name//', name).replaceAll('\\identifier//', identifier).replaceAll('\\bio//',bio).replaceAll('\\href//',href).replaceAll('\\photo_src//',photo_src).replaceAll('\\symbol//',symbol);
         }
+
+        function minimedia(id, title="",content="",upvotes=0,downvotes=0,is_upvoted=false, is_downvoted=false,href="") {
+            var upvote_button_class = "";
+            var upvote_button_active = "false";
+            var downvote_button_class = "";
+            var downvote_button_active = "false";
+            if (is_upvoted) {
+                var upvote_button_class = "is-info";
+                var upvote_button_active = "true";
+            }
+            if (is_downvoted) {
+                var downvote_button_class = "is-danger";
+                var downvote_button_active = "true";
+            }
+            return `{% include 'comms/feedback/fb.html' %}`.replaceAll('\\id//', id).replaceAll('\\title//', title).replaceAll('\\content//', content).replaceAll('\\votes//',upvotes-downvotes).replaceAll('\\upvote_button_class//',upvote_button_class).replaceAll('\\upvote_button_active//',upvote_button_active).replaceAll('\\downvote_button_class//',downvote_button_class).replaceAll('\\downvote_button_active//',downvote_button_active).replaceAll('\\href//',href);
+        }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
