--- a/app/templates/comms/feedback/feedback.html
+++ b/app/templates/comms/feedback/feedback.html
@@ -341,6 +341,8 @@ function simplify(value) {
 function searchFeedback(search,by,page=1,do_redirect=true) {
 
 	var searchObject = {'search':$('#search-feedback').val(), 'by': simplify($('.fb-search-b[data-active="true"]').data('name')), 'page':page};
+	clearPage();
+	$("#fb-container").append(infoLoader());
 	post("/feedback/", function (response) {
 			var response = JSON.parse(response);
 			var status = response["status"];
