perfect feedback search

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,6 +67,10 @@
         function infoLoader() {
             return `{% include 'info-loader.html' %}`;
         }
+
+        function noResults() {
+            return `{% include 'no-results.html' %}`;
+        }
         /*
         {% raw %}
         function paginationBar(page=1,page_count=1) {
